# prompt-injection-scanner

./: .coverage  .gitignore  Dockerfile  README.md  cli.py  config.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vercel.json
api/: requirements.txt  scan.py
app/: globals.css  layout.tsx  page.tsx
app/api/proxy-scan/: route.ts
app/commands/: page.tsx
components/site/: header.tsx
components/ui/: aurora-background.tsx  button.tsx  card-hover-effect.tsx  input.tsx  resizable-navbar.tsx  theme-toggle.tsx
examples/: secure_app.py  vulnerable_app.js  vulnerable_app.py
prompt_injection_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rules/: javascript.yaml  python.yaml  simple_javascript.yaml  simple_python.yaml
src/: __init__.py
src/benchmarks/: __init__.py
src/config/: manager.py
src/reporting/: __init__.py  cli.py
src/rules/: __init__.py
src/rules_data/: python.yaml
src/scanner/: ast_analyzer.py  cache.py  context_analyzer.py  file_processor.py  indexer.py  rule_engine.py
src/utils/: file_utils.py  repo_fetch.py
tests/: __init__.py  test_scanner.py
web/: index.html  requirements.txt  vercel.json
web/api/: scan.py
