[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-injection-scanner"
version = "0.1.0"
description = "CLI tool to detect potential prompt injection vulnerabilities in codebases"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Shrey Jain" }
]
license = { text = "MIT" }
keywords = ["security", "prompt-injection", "ai", "llm", "scanner"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "click>=8.0.0",
  "pyyaml>=6.0",
  "requests>=2.28.0",
  "rich>=13.0.0",
  "jinja2>=3.1.0",
  "gitpython>=3.1.0",
  "pathspec>=0.10.0",
  "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/your-org/prompt-injection-repo"
Issues = "https://github.com/your-org/prompt-injection-repo/issues"

[project.scripts]
prompt-scan = "cli:entry"

[tool.setuptools]
packages = [
  "src",
  "src.config",
  "src.reporting",
  "src.rules",
  "src.scanner",
  "src.utils",
  "src.rules_data",
  "src.benchmarks",
]
py-modules = ["cli"]
include-package-data = true

[tool.setuptools.package-data]
"src.rules_data" = ["*.yaml"]
"src.benchmarks" = ["*.yaml"]


